# nabt-app

./: .env.example  CLAUDE.md  Nabt_API.postman_collection.json  pyproject.toml
backend/api/: main.py  routes.py  schemas.py
backend/core/: config.py  logging.py
backend/database/: mongo_service.py
backend/llm/: config.py  prompts.py
backend/models/: product.py
backend/services/: product_comparison_service.py  product_service.py
backend/services/classifier/: categories.py  product_classifier.py
backend/services/extractor/: cleaners.py  patterns.py  product_extractor.py
data/: data-05-10-2025.json  data-06-10-2025.json
frontend/: README.md  app.py  requirements.txt
frontend/pages/: __init__.py  process_products.py  product_comparison.py
frontend/utils/: __init__.py  api_client.py
src/: __init__.py
src/api/: __init__.py  main.py  routes.py  schemas.py
src/core/: config.py
src/database/: __init__.py  mongo_service.py
src/llm/: __init__.py  config.py
src/services/: product_comparison_service.py  product_service.py
src/services/classifier/: __init__.py  product_classifier.py
src/services/extractor/: __init__.py  cleaners.py  patterns.py  product_extractor.py
